# compiler

./: .asm  .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  output.s  test.cpp  test.program
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml  lint.yml
include/frontend/: VarType.h  ast.h  code_generator.h
include/frontend/ast/: ASTNodes.def  ast.h
include/frontend/diagnostic/: DiagnosticLevels.def  debug.h  diagnostic_consumer.h  diagnostic_id.h  diagnostic_ids.h  diagnostics_engine.h
include/frontend/parse/: lexer.h  new_parser.h  parser.h
include/frontend/types/: VarType.h
include/frontend/visitor/: AbstractVisitorInst.h  AbstractVisitorValue.h  ApplyTypesBuilder.h  DumpAST.h  IRInstructionGen.h  IRValueGen.h  TraverseAst.h
include/util/: Debugging.h
scripts/: build.sh  test.sh
src/: CMakeLists.txt  compiler.cpp
src/frontend/: CMakeLists.txt  VarType.cpp  ast.cpp  code_generator.cpp
src/frontend/ast/: CMakeLists.txt  ast.cpp
src/frontend/codegen/: CMakeLists.txt  code_generator.cpp
src/frontend/parse/: CMakeLists.txt  TokenTypes.def  lexer.cpp  new_parser.cpp  parser.cpp  parser_new.cpp
src/frontend/types/: CMakeLists.txt  VarType.cpp
src/frontend/visitor/: ApplyTypesBuilder.cpp  CMakeLists.txt  DumpAST.cpp  IRInstructionGen.cpp  IRValueGen.cpp
tests/: CMakeLists.txt  README.md  RunTests.cpp  TestFramework.h  run_test.py  test1.program  test3.program  test4.program
tests/e2e/: CMakeLists.txt  Util.h  array_operations.test  minitest1.test  minitest2.test  minitest3.test  minitest4.test  minitest_comprehensive.test  minitests.cpp  minitests.program  simple_add.test  test1.cpp  test1.program  test1.test  test2.cpp  test2.program  test2.test  test3.cpp  test3.program  test3.test  test4.program  test4.test
tests/syntax/: arrays.test  basic_function.test  complex_while.test  variables.test
